fix: Remove non-existent /q/health endpoints from documentation, keep only /monitoring/health

--- a/java-assignment/src/main/resources/META-INF/resources/apis.html
+++ b/java-assignment/src/main/resources/META-INF/resources/apis.html
@@ -931,6 +931,7 @@
                         </div>
                     </div>
                     <button class="try-it-btn" onclick="testAPI('GET', '/fulfillment/product/{id}/store/{id}')">Try It</button>
+                </div>
             </div>
 
             <!-- MONITORING SECTION -->
